log
mi.,  3 de may. de 2023  0:02:14: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f1d3b8d
mi.,  3 de may. de 2023  0:02:47: 
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f206fc0
